--- a/package.json
+++ b/package.json
@@ -22,10 +22,6 @@
     "vite": "^3.2.7"
   },
   "dependencies": {
-    "@types/node-rsa": "^1.1.4",
-    "node-forge": "^1.3.1",
-    "node-rsa": "^1.1.1",
-    "peerjs": "^1.5.2",
-    "socket.io-client": "^4.7.2"
+    "node-forge": "^1.3.1"
   }
 }
