seperate cipher class and fix some bug

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "manifest_version": 3,
   "content_scripts": [
     {
-      "matches": ["https://web.bale.ai/*"],
+      "matches": ["https://web.bale.ai/*", "https://web.telegram.org/k/*"],
       "js": ["src/content/index.ts"]
     }
   ],
