--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.3",
@@ -24,7 +27,8 @@
     "svelte-preprocess": "4.10.7",
     "tslib": "2.4.0",
     "typescript": "4.8.4",
-    "vite": "^3.2.7"
+    "vite": "^3.2.7",
+    "vitepress": "1.0.0-rc.42"
   },
   "dependencies": {
     "node-forge": "^1.3.1"
