--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chatguard",
+  "license": "Apache-2.0",
   "author": {
     "name": "mostafa kheibary",
     "email": "mostafa.kheibary@gmail.com",
