:recycle: Refactor the Dom Class,changing to FOP design

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "useTabs": false,
   "tabWidth": 2,
   "svelteBracketNewLine": false,
+  "singleQuote": false,
   "svelteSortOrder": "scripts-markup-styles",
   "svelteStrictMode": false,
   "htmlWhitespaceSensitivity": "strict"
