--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vitepress": "1.0.0-rc.42"
   },
   "dependencies": {
-    "node-forge": "^1.3.1"
+    "node-forge": "^1.3.1",
+    "worker-timers": "^7.1.2"
   }
 }
