:wrench: Rename all the storage key to be dynamic

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
     }
   ],
   "action": {
+    "default_title": "ChatGuard",
     "default_popup": "src/popup/popup.html"
   },
-  "permissions": ["storage"]
+  "permissions": ["storage", "tabs"]
 }
