--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,15 @@
 {
+  "manifest_version": 3,
   "name": "ChatGuard-beta",
   "description": "Browser Add on to make any chat application (End to End) encrypted",
-  "version": "0.5.3",
+  "version": "0.6.0",
   "author": "https://github.com/mostafa-kheibary",
-  "manifest_version": 3,
   "icons": {
     "16": "src/assets/icons/icon16.png",
     "32": "src/assets/icons/icon32.png",
     "48": "src/assets/icons/icon48.png",
     "128": "src/assets/icons/icon128.png"
   },
-
   "content_scripts": [
     {
       "matches": ["https://web.bale.ai/*", "https://web.telegram.org/k/*", "https://web.splus.ir/*"],
@@ -19,7 +18,11 @@
   ],
   "action": {
     "default_title": "ChatGuard",
-    "default_popup": "src/popup/popup.html"
+    "default_popup": "src/view/popup/index.html"
+  },
+  "options_ui": {
+    "page": "src/view/options/index.html",
+    "open_in_tab": true
   },
   "permissions": ["storage", "tabs"]
 }
