--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vitepress": "1.0.0-rc.42"
   },
   "dependencies": {
+    "@material/web": "^1.3.0",
     "node-forge": "^1.3.1",
     "svelte-pathfinder": "^4.7.1",
     "worker-timers": "^7.1.2"
