--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "tslib": "2.4.0",
     "typescript": "5.3.3",
     "vite": "^5.1.4",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/user-event": "^14.5.2",
     "vitepress": "1.0.0-rc.42"
   },
   "dependencies": {
