--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "vitepress": "1.0.0-rc.42"
   },
   "dependencies": {
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/user-event": "^14.5.2",
     "node-forge": "^1.3.1",
     "svelte-pathfinder": "^4.7.1",
     "worker-timers": "^7.1.2"
