--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,12 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://web.bale.ai/*", "https://web.telegram.org/*", "https://web.splus.ir/*"],
+      "matches": [
+        "https://web.bale.ai/*",
+        "https://web.telegram.org/*",
+        "https://web.splus.ir/*",
+        "https://twitter.com/*"
+      ],
       "js": ["src/content/index.ts"]
     }
   ],
