:bug: fix the version on document and manifest, fix the invalid package bug

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "ChatGuard-beta",
-  "description": "Browser Add on to make any chat application (End to End) encrypted",
-  "version": "0.9.1",
+  "description": "Browser Add on that allow (End to End) encrypted in web chat messenger",
+  "version": "0.9.2",
   "author": "https://github.com/mostafa-kheibary",
   "icons": {
     "16": "src/assets/icons/icon16.png",
