--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -12,7 +12,7 @@ jobs:
       - name: ⚙️ Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
       - name: 🔃 Checkout
         uses: actions/checkout@v2
@@ -27,8 +27,8 @@ jobs:
         uses: montudor/action-zip@v1
 
       - name: Zip dist files 📦
-        run: zip -qq -r dist.zip dist
-        
+        run: cd dist && zip -r ../dist.zip *
+
       - name: Create release 📦
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
