:memo: add google analytics for documentation

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "ChatGuard-beta",
-  "description": "Browser Add on that allow (End to End) encrypted in web chat messenger",
+  "description": "Browser extension that allow (End to End) encrypted in web chat messenger",
   "version": "0.9.5",
   "author": "https://github.com/mostafa-kheibary",
   "icons": {
@@ -37,5 +37,5 @@
       "id": "mostafa.kheibary@gmail.com"
     }
   },
-  "permissions": ["storage", "tabs"]
+  "permissions": ["storage"]
 }
