--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.23",
     "@sveltejs/vite-plugin-svelte": "3.0.2",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/user-event": "^14.5.2",
     "@tsconfig/svelte": "3.0.0",
     "@types/chrome": "^0.0.200",
     "@types/node-forge": "^1.3.10",
+    "@zerodevx/svelte-toast": "^0.9.5",
     "sass": "^1.63.3",
     "svelte": "4.2.12",
     "svelte-check": "3.6.4",
     "tslib": "2.4.0",
     "typescript": "5.3.3",
     "vite": "^5.1.4",
-    "@testing-library/dom": "^9.3.4",
-    "@testing-library/user-event": "^14.5.2",
     "vitepress": "1.0.0-rc.42"
   },
   "dependencies": {
