--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/chrome": "^0.0.200",
     "@types/node-forge": "^1.3.10",
     "@zerodevx/svelte-toast": "^0.9.5",
+    "openpgp": "^5.11.1",
     "sass": "^1.63.3",
     "svelte": "4.2.12",
     "svelte-check": "3.6.4",
