--- a/package.json
+++ b/package.json
@@ -19,12 +19,9 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.23",
     "@sveltejs/vite-plugin-svelte": "3.0.2",
-    "@testing-library/dom": "^9.3.4",
-    "@testing-library/user-event": "^14.5.2",
     "@tsconfig/svelte": "3.0.0",
     "@types/chrome": "^0.0.200",
     "@types/node-forge": "^1.3.10",
-    "@zerodevx/svelte-toast": "^0.9.5",
     "openpgp": "^5.11.1",
     "sass": "^1.63.3",
     "svelte": "4.2.12",
@@ -36,8 +33,6 @@
   },
   "dependencies": {
     "@material/web": "^1.3.0",
-    "node-forge": "^1.3.1",
-    "svelte-pathfinder": "^4.7.1",
-    "worker-timers": "^7.1.2"
+    "svelte-pathfinder": "^4.7.1"
   }
 }
