--- a/package.json
+++ b/package.json
@@ -22,17 +22,16 @@
     "@tsconfig/svelte": "3.0.0",
     "@types/chrome": "^0.0.200",
     "@types/node-forge": "^1.3.10",
-    "openpgp": "^5.11.1",
     "sass": "^1.63.3",
     "svelte": "4.2.12",
     "svelte-check": "3.6.4",
     "tslib": "2.4.0",
     "typescript": "5.3.3",
     "vite": "^5.1.4",
-    "vitepress": "1.0.0-rc.42"
-  },
-  "dependencies": {
+    "vitepress": "1.0.0-rc.42",
     "@material/web": "^1.3.0",
-    "svelte-pathfinder": "^4.7.1"
-  }
+    "svelte-pathfinder": "^4.7.1",
+    "tweetnacl": "^1.0.3"
+  },
+  "dependencies": {}
 }
